# catapult

./: .Rhistory  .eslintignore  .eslintrc  .gitignore  .gitmodules  .gn  .vpython  .vpython3  AUTHORS  BUILD.gn  CONTRIBUTING.md  DEPS  LICENSE  OWNERS  PRESUBMIT.py  README.fuchsia  README.md  TEMP.gn  buildbucket.config  codereview.settings  cr-buildbucket.cfg  et  generate_telemetry_build.py  groups  index.md  project.config  pylintrc  sizes.txt  test_python.py
catapult_build/cpp/: BUILD.gn  BUILDCONFIG.gn  is_clang.py
catapult_build/cpp/toolchain/: BUILD.gn
tracing/tracing/: BUILD.gn  __init__.py  histogram_pb2.py  results2_template.html  tests.html
tracing/tracing-cpp/: BUILD.gn  OWNERS
tracing/tracing-cpp/value/: histogram.cc  histogram.h  histogram.proto  histogram_unittest.cc  running_statistics.cc  running_statistics_unittest.cc
tracing/tracing/base/: all_the_tests.html  base.html  base64.html  color_scheme.html  fixed_color_scheme.html  raf.html  sinebow_color_generator.html  sinebow_color_generator_test.html  timing.html  unit.html  unit_scale.html  unit_test.html  utils.html  utils_test.html
tracing/tracing/base/math/: deterministic.html  earth_movers_distance.html  earth_movers_distance_test.html  range.html  range_test.html  running_statistics.html  running_statistics_test.html  statistics.html  statistics_test.html
tracing/tracing/base/unittest/: interactive_test_runner.html  suite_loader.html  test_case.html  test_suite.html
tracing/tracing/extras/: chrome_config.html
tracing/tracing/extras/chrome/: chrome_auditor.html  chrome_auditor_test.html  chrome_test_utils.html  chrome_user_friendly_category_driver.html  chrome_user_friendly_category_driver_test.html  cpu_time.html  estimated_input_latency.html  estimated_input_latency_test.html  event_finder_utils.html  event_finder_utils_test.html  largest_contentful_paint.html  largest_contentful_paint_no_invalidation.html  screenshots_based_speed_index.html  screenshots_based_speed_index_test.html  speed_index_utils.html  speed_index_utils_test.html  time_to_interactive.html  time_to_interactive_test.html
tracing/tracing/extras/fuchsia/: image.html  image_test.html
tracing/tracing/extras/image_viewing/: image_test.html
tracing/tracing/extras/importer/: fuchsia_importer.html  gzip_importer.html  trace_code_map.html  trace_event_importer.html  trace_event_importer_test.html
tracing/tracing/extras/measure/: measure_async_slice.html
tracing/tracing/extras/symbolizer/: OWNERS  symbolize_trace.py  symbolize_trace_atos_regex.py  symbolize_trace_end_to_end_test_slow.py  symbolize_trace_macho_reader.py
tracing/tracing/extras/v8/: runtime_stats_entry.html  runtime_stats_entry_test.html
tracing/tracing/extras/vsync/: vsync_auditor.html
tracing/tracing/importer/: find_input_expectations.html  find_load_expectations.html  find_load_expectations_test.html  import.html  import_test.html  proto_expectation.html  user_model_builder_test.html
tracing/tracing/metrics/: OWNERS  all_metrics.html  android_startup_metric.html  android_startup_metric_test.html  compare_samples.py  compare_samples_unittest.py  console_error_metric.html  console_error_metric_unittest.html  console_metric.html  core_web_vitals_metric.html  count_sum_metric.html  count_sum_metric_test.html  custom_metric.html  custom_metric_test.html  devtools_metric.html  devtools_metric_unittest.html  media_metric.html  media_metric_test.html  memory_ablation.html  memory_ablation_metric.html  metric_map_function.html  metric_map_function_test.html  metric_runner.py  my_mark_metric.html  old_uma_metric.html  old_uma_metric_test.html  rendering_metric.html  rendering_metric_test.html  reported_by_page_metric.html  reported_by_page_metric_test.html  sample_exception_metric.html  spa_navigation_metric_test.html  tabs_metric.html  tabs_metric_test.html  tracing_metric.html  uma_metric.html  uma_metric_test.html  webui_metric.html
tracing/tracing/metrics/v8/: OWNERS  (+7 more)
tracing/tracing/model/: async_slice.html  async_slice_group.html  async_slice_group_test.html  clock_sync_manager.html  clock_sync_manager_test.html  device.html  device_test.html  get_revision.py  get_revision_cmdline.html  instant_event.html  model.html  power_series.html  power_series_test.html  process_memory_dump.html  slice.html  thread.html  thread_test.html  timed_event.html  vm_region.html
tracing/tracing/mre/: cloud_storage.py  corpus_driver.py  failure.py  file_handle.py  function_handle.py  gtest_progress_reporter.py  job.py  job_unittest.py  json_output_formatter.py  map_runner.py  map_single_trace.py  map_single_trace_unittest.py  map_traces_handler.py  mre_result.py  output_formatter.py  progress_reporter.py  threaded_work_queue.py
tracing/tracing/proto/: histogram.proto  histogram_proto.py
tracing/tracing/trace_data/: trace_data.py  trace_data_unittest.py
tracing/tracing/ui/: brushing_state.html  find_control.html  find_controller.html  timeline_track_view.html  timeline_view.html  timeline_view_test.html  timeline_viewport.html
tracing/tracing/value/: OWNERS  chart_json_converter.html  chart_json_converter_test.html  convert_chart_json_cmdline.html  csv_builder.html  csv_builder_test.html  gtest_json_converter.py  gtest_json_converter_unittest.py  heap_profiler.py  heap_profiler_unittest.py  histogram.cc  histogram.h  histogram.html  histogram.py  histogram_deserializer.html  histogram_deserializer.py  histogram_deserializer_test.html  histogram_deserializer_unittest.py  histogram_grouping.html  histogram_grouping.py  histogram_grouping_unittest.py  histogram_importer.html  histogram_json_converter.cc  histogram_json_converter.h  histogram_parameter_collector.html  histogram_proto_converter.py  histogram_reader.html  histogram_serializer.html  histogram_serializer.py  histogram_serializer_test.html  histogram_serializer_unittest.py  histogram_set.html  histogram_set.py  histogram_set_hierarchy.html  histogram_set_synopsis.html  histogram_set_synopsis_test.html  histogram_set_test.html  histogram_set_unittest.py  histogram_test.html  histogram_unittest.cc  (+13 more)
(+2350 files in other folders)
