# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# C++ include dirs will start from the project root dir, e.g. catapult/.
config("common_config") {
  include_dirs = [
    "../.."
  ]
}

source_set("histogram") {
  configs += [":common_config"]
  sources = [
    "value/histogram.cc",
    "value/histogram.h",
  ]
}
